--- a/E-commerce-ASP/Resources/Views/Home/About.resx
+++ b/E-commerce-ASP/Resources/Views/Home/About.resx
@@ -121,7 +121,7 @@
     <value>About Us</value>
   </data>
   <data name="CallusNow" xml:space="preserve">
-    <value>Call us Now:</value>
+    <value>Call us Now</value>
   </data>
   <data name="HereYouCanFindInfoAboutOurSite" xml:space="preserve">
     <value>Here you can find information about our Site</value>
@@ -130,6 +130,6 @@
     <value>Home</value>
   </data>
   <data name="OurAddress" xml:space="preserve">
-    <value>Our Address:</value>
+    <value>Our Address</value>
   </data>
 </root>
