--- a/E-commerce-ASP/Resources/Views/Proprietaire/Proprieataire.fr.resx
+++ b/E-commerce-ASP/Resources/Views/Proprietaire/Proprieataire.fr.resx
@@ -157,7 +157,7 @@
     <value>Historique</value>
   </data>
   <data name="LogsOfYourProducts" xml:space="preserve">
-    <value>Historique de tous les produits</value>
+    <value>Historique de tous vos produits</value>
   </data>
   <data name="Modificiation" xml:space="preserve">
     <value>Modification</value>
