--- a/E-commerce-ASP/Resources/Views/Admin/Admin.resx
+++ b/E-commerce-ASP/Resources/Views/Admin/Admin.resx
@@ -129,6 +129,9 @@
   <data name="AddToFavouriteList" xml:space="preserve">
     <value>Add to Favourite List</value>
   </data>
+  <data name="Administrator" xml:space="preserve">
+    <value>Administrator</value>
+  </data>
   <data name="AllUsers" xml:space="preserve">
     <value>All Users</value>
   </data>
@@ -178,7 +181,7 @@
     <value>Logs</value>
   </data>
   <data name="MainDashBoard" xml:space="preserve">
-    <value>Main DashBoard</value>
+    <value>Admin DashBoard</value>
   </data>
   <data name="Nature" xml:space="preserve">
     <value>Nature</value>
@@ -235,7 +238,7 @@
     <value>Terms</value>
   </data>
   <data name="UserDetails" xml:space="preserve">
-    <value>User Details</value>
+    <value>Users Details</value>
   </data>
   <data name="View Details" xml:space="preserve">
     <value>View Details</value>
@@ -245,5 +248,8 @@
   </data>
   <data name="ViewProductDetails" xml:space="preserve">
     <value>View Product Details</value>
+  </data>
+  <data name="Views" xml:space="preserve">
+    <value>Views</value>
   </data>
 </root>
